[package]
name = "isotest"
version = "0.1.0-dev.3"
description = "Enables a very specific unit testing pattern."
edition = "2021"
license = "MIT"
repository = "https://github.com/maackle/isotest-rust"

[dependencies]
futures = { version = "0.3", optional = true }

[dev-dependencies]
assert-panic = "1"
derive_more = "0"
smol = "1.2"

[features]
default = ["async"]
async = ["futures"]